--- a/home/assets/css/styleHome.css
+++ b/home/assets/css/styleHome.css
@@ -45,6 +45,7 @@ body{
     overflow-x: auto;
     scroll-snap-type: x mandatory;
     -webkit-overflow-scrolling: touch;
+    margin-bottom: 50px;
 }
 
 .movie-card {
@@ -56,4 +57,12 @@ body{
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     text-align: center;
     /*  Estilos do card do filme */
+}
+
+.popular-movies {
+    
+    display: flex;
+    overflow-x: auto;
+    scroll-snap-type: x mandatory;
+    -webkit-overflow-scrolling: touch;
 }
