--- a/home/assets/css/styleHome.css
+++ b/home/assets/css/styleHome.css
@@ -2,11 +2,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
 
 body{
- margin:0;
- padding:0;
- font-family: 'Roboto', sans-serif;
- background: linear-gradient(90deg,#30142b, #640B8B);
- color: aliceblue;
+    margin:0;
+    padding:0;
+    font-family: 'Roboto', sans-serif;
+    background: linear-gradient(90deg,#30142b, #640B8B);
+     color: aliceblue;
+    flex-wrap: wrap;
+    display: flex;
+    background-repeat: no-repeat;
+    min-height: 100vh;
+    background-attachment: fixed;
+    background-size: cover;
 }
 
 .container {
