--- a/lancamentos/assets/css/styles.css
+++ b/lancamentos/assets/css/styles.css
@@ -15,6 +15,14 @@ body{
     background-size: cover;
 }
 
+#audio{
+    margin-top: 100px;
+}
+
+#video{
+    margin-top: 25px;
+}
+
 .container {
     max-width: 1200px;
     margin: 0 auto;
