--- a/contact/style.css
+++ b/contact/style.css
@@ -7,8 +7,8 @@ body{
     align-items: center;
     min-height: 100vh;
     font-family: sans-serif;
-    background: rgb(48,20,43);
-    background: linear-gradient(90deg, rgba(48,20,43,1) 0%, rgba(163,0,255,1) 35%);
+    color: aliceblue;
+    background: linear-gradient(90deg,#30142b, #640B8B);
 }
 
 #navbar {
@@ -33,7 +33,6 @@ h1{
 
 .conteiner{
     padding: 50px;
-    background-color: #a300ff; 
     align-items: center;
     border-radius: 10px;
     min-height: 90vh;
@@ -71,7 +70,7 @@ h1{
     outline: none;
     width: fit-content;
     color: #f8f6f6;
-    background: rgba(102, 101, 101, 0.445);
+    background: rgba(164, 151, 151, 0.445);
     cursor: pointer;
     transition: 0.3s;
 }
