--- a/results/assets/css/styles.css
+++ b/results/assets/css/styles.css
@@ -1,6 +1,6 @@
 body{
     font-family: sans-serif;
-    background: #440c64;
+    background: linear-gradient(90deg,#30142b, #640B8B);
     color: rgb(223, 218, 218);
 }
 
