--- a/footer/style.css
+++ b/footer/style.css
@@ -1,9 +1,12 @@
 body {
+  font-family: 'Poppins', sans-serif;
   display: flex;
   flex-direction: column;
   min-height: 100vh;
   margin: 0;
  }
+ 
+ 
  
  #wrapper {
   display: flex;
