--- a/moviesForCategories/assets/css/stylecatg.css
+++ b/moviesForCategories/assets/css/stylecatg.css
@@ -5,7 +5,7 @@ body{
  padding:0;
  font-family: sans-serif;
  /* background: linear-gradient(90deg, #0D0D0D, #5F0E8F); */
- background: linear-gradient(90deg,#30142b, #640B8B);
+ background: linear-gradient(90deg, #0D0D0D, #5F0E8F);
  color: #F2F2F2;
  flex-wrap: wrap;
  display: flex;
