--- a/filterMidias/assets/css/filtro.css
+++ b/filterMidias/assets/css/filtro.css
@@ -2,7 +2,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-image: linear-gradient(to bottom, #0D0D0D, #5F0E8F, #A300FF);
+    background: linear-gradient(90deg, #0D0D0D, #5F0E8F);
     background-attachment: fixed;
     background-repeat: no-repeat;
 }
@@ -69,7 +69,6 @@ width: 200px;
 margin: 10px;
 padding: 10px;
 border: 2px solid #ccc;
-border-radius: 20px;
 box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
