--- a/lancamentos/assets/css/styles.css
+++ b/lancamentos/assets/css/styles.css
@@ -5,8 +5,8 @@ body{
     margin:0;
     padding:0;
     font-family: 'Roboto', sans-serif;
-    background: linear-gradient(90deg,#30142b, #640B8B);
-     color: aliceblue;
+    background: linear-gradient(90deg, #0D0D0D, #5F0E8F);
+    color: aliceblue;
     flex-wrap: wrap;
     display: flex;
     background-repeat: no-repeat;
@@ -15,59 +15,34 @@ body{
     background-size: cover;
 }
 
+#lancamentos {
+    margin: 0 auto;
+}
+
 #audio{
-    margin-top: 100px;
+    margin-top: 25px;
+    align-items: center;
 }
 
 #video{
-    margin-top: 25px;
+    margin-top: 40px;
 }
 
-.container {
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 20px;
-    margin-top: 5vh;
-}
-
-.movie-cards {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-}
-
-.movie-card img {
+.footer {
+    position: fixed;
+    bottom: 0;
     width: 100%;
-    height: auto;
+    background-color: #5F0E8F; /* Cor de fundo do rodapé */
+    color: #f2f2f2; /* Cor do texto do rodapé */
+    text-align: center; /* Centraliza o texto do rodapé */
+    padding: 10px 0; /* Adiciona um pouco de padding */
 }
 
-.movie-card h2 {
-    padding: 10px;
-    font-size: 18px;
-    font-weight: 500;
+h1{
+    margin-top: 60px;
     text-align: center;
 }
 
 
-/* Style do slider de filmes */
-.movie-section {
-    margin-bottom: 50px;
-}
 
-.movie-row {
-    display: flex;
-    overflow-x: auto;
-    scroll-snap-type: x mandatory;
-    -webkit-overflow-scrolling: touch;
-}
 
-.movie-card {
-    flex: 0 0 auto;
-    margin-right: 20px;
-    scroll-snap-align: start;
-    width: calc(13% - 20px);
-    border-radius: 4px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    text-align: center;
-    /*  Estilos do card do filme */
-}
