--- a/navbar/assets/css/style.css
+++ b/navbar/assets/css/style.css
@@ -7,7 +7,6 @@ ul {
     position: fixed;
     top: 0;
     width: 100%;
-
     display: flex;
     justify-content: space-between; /* Distribui os itens uniformemente */
     list-style-type: none;
@@ -33,7 +32,7 @@ li a:hover:not(.active) {
 }
 
 #botaoPesquisa{
-    background-image: url('../img/lupa.jpg');
+    background-image: url('caminho/para/o/icone/de/busca.png');
     background-size: cover;
     background-repeat: no-repeat;
     width: 20px;
