--- a/results/assets/css/stylecardmovie.css
+++ b/results/assets/css/stylecardmovie.css
@@ -35,5 +35,5 @@ body{
  margin:0;
  padding:0;
  font-family: sans-serif;
- background: linear-gradient(90deg,#30142b, #640B8B);
+ background: linear-gradient(90deg, #0D0D0D, #5F0E8F);
 }
