--- a/results/assets/css/styles.css
+++ b/results/assets/css/styles.css
@@ -1,6 +1,6 @@
 body{
     font-family: sans-serif;
-    background: linear-gradient(90deg,#30142b, #640B8B);
+    background: linear-gradient(90deg, #0D0D0D, #5F0E8F);
     color: rgb(223, 218, 218);
 }
 
@@ -74,4 +74,14 @@ li a:hover:not(.active) {
     width: 20px;
     height: 20px;
     cursor: pointer;
+}
+
+.footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    background-color: #5F0E8F; /* Cor de fundo do rodapé */
+    color: #f2f2f2; /* Cor do texto do rodapé */
+    text-align: center; /* Centraliza o texto do rodapé */
+    padding: 10px 0; /* Adiciona um pouco de padding */
 }
