feat: criar filtros genre and year

--- a/filterMidias/assets/css/filtro.css
+++ b/filterMidias/assets/css/filtro.css
@@ -26,7 +26,7 @@ border: 1px solid #f2f2f2;
 border-radius: 20px;
 }
 
-#searchButton {
+#filterButton {
 width: 20%;
 padding: 10px;
 border: none;
