--- a/preferences/assets/css/styles.css
+++ b/preferences/assets/css/styles.css
@@ -25,7 +25,7 @@ body{
 
 button{
     width: 100px;
-    margin-top: 12vh;
+    /* margin-top: 12vh; */
     border-radius: 20px;
     height: 30px;
 }
