--- a/preferences/assets/css/styles.css
+++ b/preferences/assets/css/styles.css
@@ -103,3 +103,4 @@ li a:hover:not(.active) {
     color: #f2f2f2; /* Cor do texto do rodapé */
     text-align: center; /* Centraliza o texto do rodapé */
     padding: 10px 0; /* Adiciona um pouco de padding */
+}
