fix bug diretórios

--- a/preferences/assets/css/styles.css
+++ b/preferences/assets/css/styles.css
@@ -84,7 +84,7 @@ li a:hover:not(.active) {
 }
   
 .active {
-    background-color: #04AA6D;
+    /* background-color: #04AA6D; */
 }
 
 #botaoPesquisa{
